# static-gallery

./: .gitignore  README.md  TODO.md  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  settings.local.example.py  settings.local.py.example  settings.py
debug/: template_debug.py
doc/: CHANGELOG.md  CONTRIBUTE.md  FUTURE.md  README.md  TODO.md  bunnycdn-setup.md  personal-setup-notes.md  remote-storage-setup.md  settings.md
doc/architecture/: README.md  metadata-consistency.md  static-site-generation.md
doc/changes/: README.md
doc/command/: README.md  collection-stats.md  deploy.md  process-photos.md
doc/old-changelogs/: 09-september.md  README.md
doc/services/: README.md  deployment.md  exif_modification.md  file_processing.md  s3_storage.md  uuid_service.md
doc/testing/: README.md  fixtures.md
doc/util/: README.md  UUIDv7.md
src/command/: build.py  collection_stats.py  deploy.py  find_samples.py  process_photos.py  serve.py  upload_photos.py
src/models/: photo.py
src/services/: deployment.py  dev_server.py  exif.py  file_processing.py  filename_service.py  fs.py  photo_metadata.py  photo_validation.py  s3_storage.py  (+4 more)
test/: conftest.py  test_dual_hash_integration.py  test_e2e_find_samples_edge_cases.py  test_exif.py  test_file_processing.py  test_filename_service.py  test_find_samples.py  test_fs.py  test_gallery_settings_complete.py  test_models.py  test_performance_real_photos.py  test_real_world_validation.py  test_s3_storage.py  test_settings.py  test_settings_isolation_fix.py  test_uuid_service.py  test_uuidv7.py
(+36 files in other folders)
