[project]
name = "galleria"
version = "0.1.0"
description = "Static web photo gallery generator"
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "exifread",
    "python-dotenv",
    "boto3",
    "markdown",
    "click",
    "timezonefinder>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pyfakefs",
    "ruff",
    "piexif>=1.1.3",
    "moto[s3]",
]

[tool.ruff]
line-length = 88
target-version = "py312"
